# Simplified_Job_Tracker

./: .gitignore  README.md  app.py  job_tracker.py  pyproject.toml  requirements.txt
auth/: auth.py
config/: user_config.json
constants/: constants.py
job_tracker/: config_manager.py  pages.py  sheets.py  utils.py
