[project]
name = "simplified-job-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "gspread>=6.1.4",
    "pandas>=2.2.3",
    "streamlit>=1.42.1",
    "watchdog>=6.0.0",
]
